Fixed page not covering entire width of landscape IPhone screen.

--- a/src/base.css
+++ b/src/base.css
@@ -59,13 +59,7 @@
 body, html {
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
     scroll-behavior: smooth;
-}
-
-body::before, html::before {
-    background: var(--background);
 }
 
 .center {
